style: watch all scss

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,8 +1,8 @@
 @import "assets/_variables";
 @import "assets/fonts";
 
-.input-group > .form-control:focus,
-.input-group > .form-select:focus,
+.input-group>.form-control:focus,
+.input-group>.form-select:focus,
 .btn:focus {
 	outline: 0 !important;
 	box-shadow: none;
@@ -39,6 +39,7 @@ section {
 	a {
 		color: $color-green;
 		text-decoration: underline;
+
 		&:hover {
 			color: $color-green;
 			text-decoration: none;
@@ -47,6 +48,7 @@ section {
 
 	select {
 		position: relative;
+
 		&:after {
 			content: "";
 			position: absolute;
@@ -68,6 +70,7 @@ section {
 		padding: 10px 30px;
 		min-width: 130px;
 		text-transform: uppercase;
+
 		&:hover {
 			background-color: $color-green-dark;
 			border-color: $color-green-dark;
@@ -80,11 +83,13 @@ section {
 
 	.btn-outline {
 		border: 2px solid $color-white;
+
 		&:hover {
 			background-color: $color-white;
 			color: $color-green !important;
 		}
 	}
+
 	.badge-primary {
 		border: 2px solid #d0d0d0;
 	}
@@ -92,15 +97,18 @@ section {
 	.pagination {
 		justify-content: center;
 		margin-bottom: 0;
+
 		.page-link {
 			color: #f7c67f;
 			background-color: transparent;
 			border-color: transparent;
+
 			&:hover {
 				border-color: $color-green-dark;
 				border-radius: 0.25rem;
 			}
 		}
+
 		.disabled {
 			.page-link {
 				color: #f7c67f;
@@ -113,18 +121,22 @@ section {
 	.card {
 		background: transparent;
 		border: none;
+
 		&-rating {
 			border-color: inherit;
 		}
+
 		&-title {
 			text-align: left;
 			white-space: nowrap;
 			margin: 1rem 0 0;
 		}
+
 		&-body {
 			padding: 1rem 0 0;
 			text-align: left;
 		}
+
 		&-footer {
 			background: transparent;
 			border: none;
@@ -138,13 +150,16 @@ section {
 		background-color: $yellow-light;
 		padding-top: var(--space);
 		padding-bottom: var(--space);
+
 		form {
 			padding-bottom: var(--space);
 		}
+
 		.lead-main {
 			max-width: 600px;
 			margin: auto;
 		}
+
 		.filter-select {
 			.form-control {
 				border-color: $yellow-dark;
@@ -155,12 +170,14 @@ section {
 				padding: 10px 20px;
 				color: $color-green;
 			}
+
 			.btn-primary {
 				@media screen and (min-width: 768px) {
 					margin-left: 1.5rem;
 				}
 			}
 		}
+
 		.swiper {
 			width: calc(100% - 5px);
 			min-height: 500px;
@@ -168,17 +185,20 @@ section {
 			border-radius: 1rem;
 			overflow: hidden;
 			margin-right: 0;
+
 			&-wrapper,
 			&-slide {
 				height: 100%;
 				position: relative;
 			}
+
 			&-img {
 				position: absolute;
 				left: 0;
 				top: 0;
 				width: 100%;
 				height: 100%;
+
 				img {
 					object-fit: cover;
 					object-position: center;
@@ -186,6 +206,7 @@ section {
 					height: 100%;
 				}
 			}
+
 			&-button-prev,
 			&-button-next {
 				background-color: $color-green-dark;
@@ -196,9 +217,11 @@ section {
 				bottom: 30px;
 				left: auto;
 				transition: all 0.15s ease-in-out;
+
 				&:hover {
 					background-color: $color-green;
 				}
+
 				&:after {
 					content: "";
 					width: 0;
@@ -208,24 +231,26 @@ section {
 					left: 40%;
 				}
 			}
+
 			&-button-prev {
 				right: 410px;
+
 				&:after {
 					content: "";
 					border-style: solid;
 					border-width: 5px 10px 5px 0;
-					border-color: transparent $color-green-light transparent
-						transparent;
+					border-color: transparent $color-green-light transparent transparent;
 				}
 			}
+
 			&-button-next {
 				right: 350px;
+
 				&::after {
 					content: "";
 					border-style: solid;
 					border-width: 5px 0 5px 10px;
-					border-color: transparent transparent transparent
-						$color-green-light;
+					border-color: transparent transparent transparent $color-green-light;
 				}
 			}
 		}
@@ -240,6 +265,7 @@ section {
 				overflow: hidden;
 				position: relative;
 				z-index: 2;
+
 				.icon-leaf {
 					padding: 20px 20px 0 0;
 					display: flex;
@@ -248,23 +274,28 @@ section {
 					width: 100%;
 					right: 0;
 				}
+
 				&-body {
 					padding: 1.5rem 2.5rem 2.5rem;
 				}
+
 				&-title {
 					min-height: 60px;
 					display: flex;
 					align-items: flex-end;
 					margin-bottom: 1rem;
 				}
+
 				&-img {
 					border: none;
 				}
+
 				.btn-primary {
 					margin-top: 2rem;
 					font-family: $font-Basier-medium;
 				}
 			}
+
 			.swiper {
 				&-content {
 					z-index: 1;
@@ -278,13 +309,16 @@ section {
 					justify-content: space-between;
 					margin-left: auto;
 					position: relative;
+
 					.btn-outline {
 						border-color: #d0d0d0;
+
 						&:hover {
 							background-color: #d0d0d0;
 							color: $color-white !important;
 						}
 					}
+
 					.recommend {
 						background-color: $color-green-dark;
 						color: $color-white;
@@ -295,13 +329,17 @@ section {
 						justify-content: space-between;
 						margin-bottom: 0.5rem;
 					}
+
 					.product-details {
+
 						&-percent,
 						&-tags {
 							color: $color-black;
 						}
+
 						&-percent {
 							margin-bottom: 1.5rem;
+
 							ul {
 								list-style: none;
 								padding: 0;
@@ -309,26 +347,32 @@ section {
 								max-width: 180px;
 								grid-template-columns: 1fr 1fr;
 								white-space: nowrap;
+
 								img {
 									margin-right: 0.25rem;
 								}
-								li + li {
+
+								li+li {
 									margin-left: 0.5rem;
 								}
 							}
 						}
+
 						&-tags {
 							.btn {
 								padding: 15px;
 							}
+
 							img {
 								margin-right: 0.25rem;
 							}
-							span + span {
+
+							span+span {
 								margin-left: 0.5rem;
 							}
 						}
 					}
+
 					.btn-learn-more {
 						width: 100%;
 						max-width: 400px;
@@ -342,6 +386,7 @@ section {
 
 		.section-slide-2 {
 			margin-top: 5px;
+
 			.card {
 				background-color: $color-green;
 				color: $color-white;
@@ -353,19 +398,23 @@ section {
 				z-index: 2;
 				height: 100%;
 				color: $color-white;
+
 				&-body {
 					padding: 2.5rem;
 					display: flex;
 					flex-direction: column;
 					justify-content: center;
 				}
+
 				&-title {
 					color: $color-white;
 					margin-bottom: 0;
 				}
+
 				&-text {
 					margin: 1.5rem 0;
 				}
+
 				.btn {
 					width: 100%;
 					max-width: 200px;
@@ -376,68 +425,85 @@ section {
 					text-transform: uppercase;
 				}
 			}
+
 			.swiper {
 				height: 350px;
 				min-height: auto;
+
 				&-content {
 					height: 100%;
 					margin-left: auto;
 				}
+
 				&-button-next {
 					right: calc(33.33333333% + 30px);
 				}
+
 				&-button-prev {
 					right: calc(33.33333333% + 90px);
 				}
 			}
 		}
 	}
+
 	&.section-popular {
 		background-color: $yellow;
 		padding-top: var(--space);
 		padding-bottom: var(--space);
+
 		.lead-main {
 			border-bottom: 1px solid #f3e1c4;
 			padding-bottom: calc(var(--space) / 2);
 			margin-bottom: calc(var(--space) / 2);
+
 			h2 {
 				margin-bottom: 1rem;
 			}
 		}
+
 		.card {
 			background: transparent;
 			border: none;
+
 			&-rating {
 				border-color: #f3e1c4;
 			}
 		}
+
 		.pagination {
 			margin-top: var(--space);
 		}
 	}
+
 	&.section-subscribe {
 		background-color: $color-green-dark;
 		color: $color-white;
 		position: relative;
 		min-height: 400px;
+
 		.icon-leaf {
 			position: absolute;
 			right: 30px;
 			top: 30px;
 		}
+
 		.card {
 			padding: 4rem 0;
 			max-width: 430px;
+
 			&-title {
 				margin: 0 0 1.5rem;
 			}
+
 			&-body {
 				padding: 0;
 			}
 		}
+
 		.input-group {
 			margin-top: 1.5rem;
 			margin-bottom: 1.5rem;
+
 			input {
 				background-color: transparent;
 				color: $color-white;
@@ -445,21 +511,25 @@ section {
 				height: 60px;
 				border-radius: 0.5rem;
 			}
+
 			.btn-primary {
 				border-radius: 0.5rem;
 				margin-left: -10px;
+
 				&:hover {
 					background-color: #007871;
 					border: 1px solid #007871;
 				}
 			}
 		}
+
 		.product-hot {
 			position: absolute;
 			right: 0;
 			bottom: 0;
 			width: 50%;
 			height: 100%;
+
 			&:before {
 				content: "";
 				position: absolute;
@@ -472,8 +542,10 @@ section {
 			}
 		}
 	}
+
 	.shop-location {
 		padding-top: var(--space);
+
 		.btn-default {
 			border-radius: 0.25rem !important;
 			border: 1px solid $color-grey;
@@ -481,52 +553,63 @@ section {
 			margin-bottom: 1rem;
 			padding: 5px 7px;
 		}
+
 		.filter-header {
 			font-size: 16px;
 			font-family: $font-Basier-medium;
+
 			.btn-filter {
 				margin-bottom: 1rem;
+
 				.btn {
 					color: $color-green;
 					border-radius: 60px;
 					padding: 8px 16px;
 					min-width: 50px;
+
 					&.active,
 					&:hover {
 						background: #00423e;
 					}
 				}
 			}
+
 			h3 {
 				font-size: 16px;
 				font-family: $font-Basier-medium;
 			}
 		}
+
 		.filter-by-tag {
 			.btn-group {
 				padding: 1rem;
 				font-family: $font-Basier-medium;
 			}
 		}
+
 		.filter-result,
 		.sort,
 		.form-control {
 			font-size: 90%;
 		}
+
 		.form-control {
 			padding: 0;
 			border: none;
 			margin-left: 10px;
 		}
+
 		label {
 			white-space: nowrap;
 		}
 
 		.card {
 			font-size: 90%;
+
 			&-img-top {
 				height: 100px;
 				overflow: hidden;
+
 				img {
 					object-fit: cover;
 					width: 100%;
@@ -534,10 +617,12 @@ section {
 					object-position: center;
 				}
 			}
+
 			&-status {
 				font-size: 85%;
 				display: flex;
 				align-items: center;
+
 				.close {
 					width: 10px;
 					height: 10px;
@@ -547,6 +632,7 @@ section {
 					margin-right: 5px;
 				}
 			}
+
 			&-footer {
 				font-size: 90%;
 			}
@@ -558,13 +644,14 @@ section {
 			}
 		}
 
-		.google-map{
+		.google-map {
 			background: url("../images/home/mockup_map.jpg");
 			width: 100%;
 			height: 100%;
 			background-size: cover;
 		}
 	}
+
 	.shop-results {
 		.border {
 			padding: 0.5rem 1rem;
@@ -572,9 +659,11 @@ section {
 			font-size: 80%;
 			margin-bottom: 2rem;
 		}
+
 		.card {
 			&-img-top {
 				height: 200px;
+
 				img {
 					object-position: center;
 					object-fit: cover;
@@ -583,6 +672,7 @@ section {
 				}
 			}
 		}
+
 		.btn-outline {
 			border-color: $color-green;
 			background: transparent;
@@ -593,21 +683,25 @@ section {
 			min-width: 130px;
 			text-transform: uppercase;
 			border-width: 1px;
+
 			&:hover {
 				background-color: $color-green;
 				color: $color-white !important;
 			}
 		}
+
 		.pagination {
 			padding-top: var(--space);
 			padding-bottom: var(--space);
 		}
 	}
+
 	&.section-welcome {
 		padding-top: var(--space);
 		padding-bottom: var(--space);
-		.card{
-			&-title{
+
+		.card {
+			&-title {
 				color: $color-black;
 				font-family: $font-Basier-medium;
 				margin-bottom: 1rem;
@@ -626,6 +720,7 @@ section {
 	padding: 1rem 0;
 	margin: 1.5rem 0;
 	color: $color-green;
+
 	.star-rating {
 		direction: rtl;
 		display: inline-block;
@@ -642,11 +737,13 @@ section {
 			cursor: pointer;
 			-webkit-transition: all 0.3s ease-in-out;
 			transition: all 0.3s ease-in-out;
+
 			.bi-star-fill {
 				position: absolute;
 				opacity: 0;
 				-webkit-transition: all 0.3s ease-in-out;
 				transition: all 0.3s ease-in-out;
+
 				&.active {
 					opacity: 1;
 				}
@@ -654,9 +751,10 @@ section {
 		}
 
 		label:hover,
-		label:hover ~ label,
-		input[type="radio"]:checked ~ label {
+		label:hover~label,
+		input[type="radio"]:checked~label {
 			color: $color-green;
+
 			.bi-star-fill {
 				opacity: 1;
 			}
