--- a/assets/scss/favorite_strains.scss
+++ b/assets/scss/favorite_strains.scss
@@ -65,6 +65,120 @@ article {
                     color: $color-green;
                     margin-bottom: 24px;
                 }
+
+                .box-img {
+                    height: 189px;
+                    margin-bottom: 33px;
+                    border: 1px solid $color-grey;
+
+                    .wishlist {
+                        padding: 12px;
+                        position: absolute;
+                        top: 7px;
+                        right: 7px;
+                        cursor: pointer;
+                    }
+                }
+
+                .box-text {
+                    h2 {
+                        font-family: $font-Basier-medium;
+                        font-size: 16px;
+                        color: $color-green;
+                    }
+
+                    .rating {
+                        padding: 10px 0;
+                        margin: 14px 0 12px 0;
+                        border-top: 1px solid $color-grey;
+                        border-bottom: 1px solid $color-grey;
+
+                        p {
+                            font-size: 12px;
+                            color: $color-green;
+                        }
+                    }
+
+                    .meta-product {
+                        .type {
+                            font-size: 10px;
+                            color: $color-black;
+                            max-width: 100%;
+                            height: 20px;
+                            padding: 4px 9px;
+                            background: $color-grey;
+                            border-radius: 3px;
+                            display: inline-flex;
+                        }
+
+                        .thc,
+                        .cbg {
+                            font-size: 8px;
+                            display: flex;
+                            align-items: center;
+
+                            img {
+                                margin-right: 7px;
+                            }
+                        }
+                    }
+
+                    .feature {
+                        margin: 13px -4px 20px -4px;
+
+                        .col-6 {
+                            padding: 0 4px;
+                        }
+
+                        .feature-btn {
+                            width: 100%;
+                            height: 37px;
+                            border: 1px solid $color-grey;
+                            border-radius: 3px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+
+                            img {
+                                margin-right: 6px;
+                            }
+                        }
+                    }
+
+                    .chemical_compound {
+                        font-size: 8px;
+                        display: flex;
+                        align-content: center;
+                        margin-bottom: 10px;
+
+                        &:before {
+                            content: '';
+                            width: 7px;
+                            height: 14px;
+                            margin-right: 6px;
+                            background: #AB0261;
+                            border-radius: 3.5px;
+                            display: block;
+                        }
+                    }
+
+                    p {
+                        font-size: 13px;
+                    }
+
+                    a {
+                        font-size: 12px;
+                        color: $color-green;
+                        width: 124px;
+                        height: 37px;
+                        border: 1px solid $color-green;
+                        border-radius: 18px;
+                        margin: 33px 0 0 0;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
+                }
             }
         }
     }
