--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -634,6 +634,25 @@ aside {
 			}
 		}
 	}
+
+    &-attribute {
+        margin: 1.5rem 0 1rem;
+        span {
+            display: block;
+            position: relative;
+            padding-left: 20px;
+            font-size: var(--font-size);
+            &:before {
+                content: "";
+                width: 7px;
+                height: 100%;
+                border-radius: 8px;
+                position: absolute;
+                left: 0;
+                top: 0;
+            }
+        }
+    }
 }
 
 // Rating
