--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -433,64 +433,64 @@ aside {
 // Filter
 .filter {
 	&-simple {
-        padding-left: 1.5rem;
-        border-top: 1px solid $color-grey;
-        padding-top: 1rem;
+		padding-left: 1.5rem;
+		border-top: 1px solid $color-grey;
+		padding-top: 1rem;
 		li,
 		a {
 			color: $color-black;
 			text-decoration: none;
-            padding-top: 0.5rem;
+			padding-top: 0.5rem;
 			padding-bottom: 0.5rem;
-            font-size: 14px;
+			font-size: 14px;
 			&:hover {
-                color: $color-black;
+				color: $color-black;
 				text-decoration: underline;
 			}
 		}
 	}
-    &-by-type{
-        padding: 0;
+	&-by-type {
+		padding: 0;
 		margin: 0;
-        border-top: 1px solid $color-grey;
-        li {
-            padding-left: 0;
-            padding-right: 0;
-            border-left: none;
-            border-right: none;
-            border-bottom: 1px solid $color-grey;
-            padding-top: 0.5rem;
+		border-top: 1px solid $color-grey;
+		li {
+			padding-left: 0;
+			padding-right: 0;
+			border-left: none;
+			border-right: none;
+			border-bottom: 1px solid $color-grey;
+			padding-top: 0.5rem;
 			padding-bottom: 0.5rem;
-            display: flex;
-            align-items: center;
-            cursor: pointer;
-            &.active,
-            &:hover {
-                background: none;
-                .card {
-                    &-img-left {
-                        background-color: $color-green-dark;
-                    }
-                }
-            }
-            .card {
-                &-img-left {
-                    width: 65px;
-                    height: 65px;
-                    border-radius: 65px;
-                    border: 2px solid $color-green-light;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    padding: 15px;
-                    margin-right: 15px;
-                    transition: all 0.25s linear;
-                }
-            }
-        }
-    }
+			display: flex;
+			align-items: center;
+			cursor: pointer;
+			&.active,
+			&:hover {
+				background: none;
+				.card {
+					&-img-left {
+						background-color: $color-green-dark;
+					}
+				}
+			}
+			.card {
+				&-img-left {
+					width: 65px;
+					height: 65px;
+					border-radius: 65px;
+					border: 2px solid $color-green-light;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					padding: 15px;
+					margin-right: 15px;
+					transition: all 0.25s linear;
+				}
+			}
+		}
+	}
 	&-terpenes {
-        padding: 0;
+		padding: 0;
 		margin: 0;
 		li {
 			display: block;
@@ -586,6 +586,14 @@ aside {
 		margin: 1rem 0 0;
 	}
 
+	&-img {
+		img {
+			object-fit: cover;
+			width: 100%;
+			height: 100%;
+		}
+	}
+
 	&-body {
 		padding: 1rem 0 0;
 		text-align: left;
@@ -635,24 +643,28 @@ aside {
 		}
 	}
 
-    &-attribute {
-        margin: 1.5rem 0 1rem;
-        span {
-            display: block;
-            position: relative;
-            padding-left: 20px;
-            font-size: var(--font-size);
-            &:before {
-                content: "";
-                width: 7px;
-                height: 100%;
-                border-radius: 8px;
-                position: absolute;
-                left: 0;
-                top: 0;
-            }
-        }
-    }
+	&-attribute {
+		margin: 1.5rem 0 1rem;
+		span {
+			display: block;
+			position: relative;
+			padding-left: 20px;
+			font-size: var(--font-size);
+			&:before {
+				content: "";
+				width: 7px;
+				height: 100%;
+				border-radius: 8px;
+				position: absolute;
+				left: 0;
+				top: 0;
+			}
+		}
+	}
+
+	&-progress{
+		margin: 1rem 0;
+	}
 }
 
 // Rating
