--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -290,48 +290,48 @@ section {
 						margin-bottom: 0.5rem;
 					}
 
-					.product-details {
+					// .product-details {
 
-						&-percent,
-						&-tags {
-							color: $color-black;
-						}
+					// 	&-percent,
+					// 	&-tags {
+					// 		color: $color-black;
+					// 	}
 
-						&-percent {
-							margin-bottom: 1.5rem;
+					// 	&-percent {
+					// 		margin-bottom: 1.5rem;
 
-							ul {
-								list-style: none;
-								padding: 0;
-								margin: 0;
-								max-width: 180px;
-								grid-template-columns: 1fr 1fr;
-								white-space: nowrap;
+					// 		ul {
+					// 			list-style: none;
+					// 			padding: 0;
+					// 			margin: 0;
+					// 			max-width: 180px;
+					// 			grid-template-columns: 1fr 1fr;
+					// 			white-space: nowrap;
 
-								img {
-									margin-right: 0.25rem;
-								}
+					// 			img {
+					// 				margin-right: 0.25rem;
+					// 			}
 
-								li+li {
-									margin-left: 0.5rem;
-								}
-							}
-						}
+					// 			li+li {
+					// 				margin-left: 0.5rem;
+					// 			}
+					// 		}
+					// 	}
 
-						&-tags {
-							.btn {
-								padding: 15px;
-							}
+					// 	&-tags {
+					// 		.btn {
+					// 			padding: 15px;
+					// 		}
 
-							img {
-								margin-right: 0.25rem;
-							}
+					// 		img {
+					// 			margin-right: 0.25rem;
+					// 		}
 
-							span+span {
-								margin-left: 0.5rem;
-							}
-						}
-					}
+					// 		span+span {
+					// 			margin-left: 0.5rem;
+					// 		}
+					// 	}
+					// }
 
 					.btn-learn-more {
 						width: 100%;
