--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -411,6 +411,37 @@ aside {
 	justify-content: center;
 	margin-bottom: 0;
 
+	&-wrapper {
+		color: $color-green;
+		font-family: $font-Basier-medium;
+		.pagination {
+			.page-link {
+				text-decoration: none;
+				border-radius: 0.25rem;
+				padding: 0.375rem 1rem;
+				color: #AAAAAA;
+				&.prev,
+				&.next{
+					color: $color-green;
+				}
+				&.active {
+					border-color: $color-green;
+					color: $color-green;
+				}
+				&:hover {
+					color: $color-green;
+					border-color: $color-green !important;
+				}
+			}
+			.disabled {
+				text-decoration: none;
+				.page-link {
+					color: $color-green;
+				}
+			}
+		}
+	}
+
 	.page-link {
 		color: #f7c67f;
 		background-color: transparent;
@@ -676,7 +707,7 @@ aside {
 		display: flex;
 		width: auto;
 		align-items: center;
-		background: #EAEAEA;
+		background: #eaeaea;
 		border-radius: 20px;
 		padding: 5px 20px;
 		top: 10px;
@@ -830,7 +861,7 @@ aside {
 }
 
 // Text
-.text{
+.text {
 	&-green {
 		color: $color-green;
 	}
