--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -345,28 +345,6 @@ aside.sidebar .accordion-body {
   padding-right: 0;
   padding-top: 0;
 }
-aside.sidebar .accordion-body .form-check {
-  font-size: 90%;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  color: #000000;
-}
-aside.sidebar .accordion-body .form-check .form-check-input {
-  border-color: #3E9E6C;
-  border-width: 2px;
-}
-aside.sidebar .accordion-body .form-check .form-check-input:checked[type=checkbox] {
-  background-image: none;
-}
-aside.sidebar .accordion-body .form-check .form-check-input:checked {
-  background-color: #3E9E6C;
-  border-color: #3E9E6C;
-}
-aside.sidebar .accordion-body .form-check .form-check-input:focus {
-  box-shadow: none;
-  outline: none;
-  border-color: #3E9E6C;
-}
 aside.sidebar .accordion-footer ul {
   list-style-type: none;
   padding: 0;
@@ -378,6 +356,29 @@ aside.sidebar .accordion-footer ul a {
 }
 aside.sidebar .accordion-footer ul a:hover {
   text-decoration: underline;
+}
+
+.form-check-green {
+  font-size: 90%;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  color: #000000;
+}
+.form-check-green .form-check-input {
+  border-color: #3E9E6C;
+  border-width: 2px;
+}
+.form-check-green .form-check-input:checked[type=checkbox] {
+  background-image: none;
+}
+.form-check-green .form-check-input:checked {
+  background-color: #3E9E6C;
+  border-color: #3E9E6C;
+}
+.form-check-green .form-check-input:focus {
+  box-shadow: none;
+  outline: none;
+  border-color: #3E9E6C;
 }
 
 .pagination {
@@ -392,7 +393,7 @@ aside.sidebar .accordion-footer ul a:hover {
   text-decoration: none;
   border-radius: 0.25rem;
   padding: 0.375rem 1rem;
-  color: #AAAAAA;
+  color: #aaaaaa;
 }
 .pagination-wrapper .pagination .page-link.prev, .pagination-wrapper .pagination .page-link.next {
   color: #3E9E6C;
