--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -365,28 +365,6 @@ aside {
 				padding-left: 0;
 				padding-right: 0;
 				padding-top: 0;
-				.form-check {
-					font-size: 90%;
-					padding-top: 0.5rem;
-					padding-bottom: 0.5rem;
-					color: $color-black;
-					.form-check-input {
-						border-color: $color-green;
-						border-width: 2px;
-						&:checked[type="checkbox"] {
-							background-image: none;
-						}
-						&:checked {
-							background-color: $color-green;
-							border-color: $color-green;
-						}
-						&:focus {
-							box-shadow: none;
-							outline: none;
-							border-color: $color-green;
-						}
-					}
-				}
 			}
 			&-footer {
 				ul {
@@ -406,6 +384,30 @@ aside {
 	}
 }
 
+// Checkbox
+.form-check-green {
+	font-size: 90%;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+	color: $color-black;
+	.form-check-input {
+		border-color: $color-green;
+		border-width: 2px;
+		&:checked[type="checkbox"] {
+			background-image: none;
+		}
+		&:checked {
+			background-color: $color-green;
+			border-color: $color-green;
+		}
+		&:focus {
+			box-shadow: none;
+			outline: none;
+			border-color: $color-green;
+		}
+	}
+}
+
 // Pagination
 .pagination {
 	justify-content: center;
@@ -419,9 +421,9 @@ aside {
 				text-decoration: none;
 				border-radius: 0.25rem;
 				padding: 0.375rem 1rem;
-				color: #AAAAAA;
+				color: #aaaaaa;
 				&.prev,
-				&.next{
+				&.next {
 					color: $color-green;
 				}
 				&.active {
