feat : write_review - finished html and css

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -296,6 +296,26 @@ article .border-bottom,
 article .border-start {
   border-color: #EAEAEA !important;
 }
+article .btn-primary {
+  background-color: #3E9E6C;
+  border-color: #3E9E6C;
+  border-radius: 40px;
+  font-size: 14px;
+  padding: 10px 30px;
+  min-width: 130px;
+  text-transform: uppercase;
+}
+article .btn-primary:hover {
+  background-color: #00423E;
+  border-color: #00423E;
+}
+article .btn-outline {
+  border: 2px solid #fff;
+}
+article .btn-outline:hover {
+  background-color: #fff;
+  color: #3E9E6C !important;
+}
 
 aside.sidebar {
   margin-top: 90px;
@@ -379,6 +399,20 @@ aside.sidebar .accordion-footer ul a:hover {
   box-shadow: none;
   outline: none;
   border-color: #3E9E6C;
+}
+
+.form-radio-green {
+  border-color: #3E9E6C;
+}
+.form-radio-green:checked {
+  background-color: #3E9E6C;
+  border-color: #3E9E6C;
+}
+.form-radio-green:checked[type=radio] {
+  background-image: none;
+}
+.form-radio-green:focus {
+  box-shadow: none;
 }
 
 .pagination {
@@ -713,6 +747,7 @@ aside.sidebar .accordion-footer ul a:hover {
 }
 .product-details-percent .btn-outline, .product-details-tags .btn-outline {
   border-color: #d0d0d0;
+  border-width: 1px;
 }
 .product-details-percent .btn-outline:hover, .product-details-tags .btn-outline:hover {
   background-color: #d0d0d0;
