--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -312,6 +312,30 @@ article {
 	.border-start {
 		border-color: $color-grey !important;
 	}
+
+	.btn-primary {
+		background-color: $color-green;
+		border-color: $color-green;
+		border-radius: 40px;
+		font-size: 14px;
+		padding: 10px 30px;
+		min-width: 130px;
+		text-transform: uppercase;
+
+		&:hover {
+			background-color: $color-green-dark;
+			border-color: $color-green-dark;
+		}
+	}
+
+	.btn-outline {
+		border: 2px solid $color-white;
+
+		&:hover {
+			background-color: $color-white;
+			color: $color-green !important;
+		}
+	}
 }
 
 aside {
@@ -405,6 +429,19 @@ aside {
 			outline: none;
 			border-color: $color-green;
 		}
+	}
+}
+.form-radio-green {
+	border-color: $color-green;
+	&:checked {
+		background-color: $color-green;
+		border-color: $color-green;
+	}
+	&:checked[type="radio"] {
+		background-image: none;
+	}
+	&:focus {
+		box-shadow: none;
 	}
 }
 
@@ -813,6 +850,7 @@ aside {
 
 		.btn-outline {
 			border-color: #d0d0d0;
+			border-width: 1px;
 
 			&:hover {
 				background-color: #d0d0d0;
