--- a/assets/css/write_review.css
+++ b/assets/css/write_review.css
@@ -83,5 +83,67 @@ article .review-write .btn {
   width: calc(16.6666666667% - 0.5rem);
   margin: 0 0 0.5rem;
 }
+@media screen and (max-width: 991px) {
+  article .review-write .btn {
+    width: calc(33.3333333333% - 0.5rem);
+  }
+}
+@media screen and (max-width: 575px) {
+  article .review-write .btn {
+    width: calc(50% - 0.5rem);
+  }
+}
+article .review-header {
+  display: flex;
+  align-items: center;
+}
+article .review-img {
+  max-width: 70px;
+  margin-right: 10px;
+}
+article .card-body {
+  padding: 1rem;
+  height: 130px;
+  padding: 1rem 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+article .card-rating {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+article .card-rating .star-rating label {
+  font-size: 30px;
+}
+article .card-vote .form-check {
+  width: calc(50% - 2rem);
+}
+article .comment-content textarea {
+  background: #f6f7f6;
+  width: 100%;
+  border-radius: 12px;
+  border-color: #e7e7e7;
+  padding: 1.5rem;
+  resize: none;
+}
+article .comment-content textarea:focus {
+  box-shadow: none;
+  outline: none;
+}
+article .comment-content .btn-link {
+  background: transparent;
+  border: none;
+  color: #707170;
+  margin-right: 1.5rem;
+}
+article .comment-desc {
+  border-radius: 5px;
+  padding: 10px;
+  margin-left: 10px;
+  color: #b5b5b5;
+  font-size: 90%;
+}
 
 /*# sourceMappingURL=write_review.css.map */
