--- a/assets/scss/write_review.scss
+++ b/assets/scss/write_review.scss
@@ -32,21 +32,90 @@ section {
 }
 
 article {
-    .review {
-        &-title {
+	.review {
+		&-title {
 			span {
 				color: #bfbfbf;
 				font-size: 16px;
 			}
 		}
-        &-write {
-            .product-details-tags{
-                justify-content: space-between;
-            }
-            .btn {
-                width: calc(calc(100% / 6) - 0.5rem);
-                margin: 0 0 0.5rem;
-            }
-        }
-    }
+		&-write {
+			.product-details-tags {
+				justify-content: space-between;
+			}
+			.btn {
+				width: calc(calc(100% / 6) - 0.5rem);
+				margin: 0 0 0.5rem;
+                @media screen and (max-width: 991px) {
+					width: calc(calc(100% / 3) - 0.5rem);
+				}
+				@media screen and (max-width: 575px) {
+					width: calc(calc(100% / 2) - 0.5rem);
+				}
+			}
+		}
+		&-header {
+			display: flex;
+			align-items: center;
+		}
+		&-img {
+			max-width: 70px;
+			margin-right: 10px;
+		}
+	}
+	.card {
+		&-body {
+			padding: 1rem;
+			height: 130px;
+			padding: 1rem 4rem;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
+		}
+		&-rating {
+			border: none;
+			margin: 0;
+			padding: 0;
+			.star-rating {
+				label {
+					font-size: 30px;
+				}
+			}
+		}
+		&-vote {
+			.form-check {
+				width: calc(50% - 2rem);
+			}
+		}
+	}
+
+	.comment {
+		&-content {
+			textarea {
+				background: #f6f7f6;
+				width: 100%;
+				border-radius: 12px;
+				border-color: #e7e7e7;
+				padding: 1.5rem;
+				resize: none;
+				&:focus {
+					box-shadow: none;
+					outline: none;
+				}
+			}
+			.btn-link {
+				background: transparent;
+				border: none;
+				color: #707170;
+				margin-right: 1.5rem;
+			}
+		}
+		&-desc {
+			border-radius: 5px;
+			padding: 10px;
+			margin-left: 10px;
+			color: #b5b5b5;
+			font-size: 90%;
+		}
+	}
 }
